Fix WindowMixin