@@ -6,7 +6,6 @@ import com.sun.jna.Platform;
 import com.sun.jna.platform.win32.Kernel32Util;
 import com.sun.jna.platform.win32.Tlhelp32;
 import me.jellysquid.mods.sodium.client.platform.MessageBox;
-import me.jellysquid.mods.sodium.client.platform.NativeWindowHandle;
 import me.jellysquid.mods.sodium.client.platform.windows.WindowsFileVersion;
 import me.jellysquid.mods.sodium.client.platform.windows.api.Kernel32;
 import me.jellysquid.mods.sodium.client.platform.windows.api.version.Version;
@@ -15,13 +14,9 @@ import org.jetbrains.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
-
-import static com.ibm.icu.impl.duration.impl.DataRecord.EGender.names;
 
 /**
  * Utility class for determining whether the current process has been injected into or otherwise modified. This should
@@ -31,18 +26,9 @@ import static com.ibm.icu.impl.duration.impl.DataRecord.EGender.names;
 public class ModuleScanner {
     private static final Logger LOGGER = LoggerFactory.getLogger("Sodium-Win32ModuleChecks");
 
-    private static final String[] RTSS_HOOKS_MODULE_NAMES = {
-            "RTSSHooks64.dll",
-            "RTSSHooks.dll"
-    };
+    private static final String[] RTSS_HOOKS_MODULE_NAMES = { "RTSSHooks64.dll", "RTSSHooks.dll" };
 
-    private static final String[] ASUS_GPU_TWEAK_MODULE_NAMES = {
-            "GTIII-OSD64-GL.dll",   "GTIII-OSD-GL.dll",
-            "GTIII-OSD64-VK.dll",   "GTIII-OSD-VK.dll",
-            "GTIII-OSD64.dll",      "GTIII-OSD.dll"
-    };
-
-    public static void checkModules(NativeWindowHandle window) {
+    public static void checkModules() {
         List<String> modules;
 
         try {
@@ -53,40 +39,33 @@ public class ModuleScanner {
         }
 
         if (modules.isEmpty()) {
+            // Platforms other than Windows will not return anything.
             return;
         }
 
-        // RivaTuner hooks the wglCreateContext() function to inject itself, and injects even if the process
-        // is blacklisted in the settings. The only way to stop it from injecting is to close the server process
-        // entirely.
+        // RivaTuner hooks the wglCreateContext function, and leaves itself behind as a loaded module
         if (BugChecks.ISSUE_2048 && isModuleLoaded(modules, RTSS_HOOKS_MODULE_NAMES)) {
-            checkRTSSModules(window);
-        }
-
-        // ASUS GPU Tweak III hooks SwapBuffers() function to inject itself, and does so even if the On-Screen
-        // Display (OSD) is disabled. The only way to stop it from hooking the game is to add the Java process to
-        // the blacklist, or uninstall the application entirely.
-        if (BugChecks.ISSUE_2637 && isModuleLoaded(modules, ASUS_GPU_TWEAK_MODULE_NAMES)) {
-            checkASUSGpuTweakIII(window);
+            checkRTSSModules();
         }
     }
 
     private static List<String> listModules() {
         if (!Platform.isWindows()) {
-            return List.of();
+            return ImmutableList.of();
+        } else {
+            int i = com.sun.jna.platform.win32.Kernel32.INSTANCE.GetCurrentProcessId();
+            ImmutableList.Builder<String> builder = ImmutableList.builder();
+
+            for(Tlhelp32.MODULEENTRY32W mODULEENTRY32W : Kernel32Util.getModules(i)) {
+                String string = mODULEENTRY32W.szModule();
+                builder.add(string);
+            }
+
+            return builder.build();
         }
-
-        var pid = com.sun.jna.platform.win32.Kernel32.INSTANCE.GetCurrentProcessId();
-        var modules = new ArrayList<String>();
-
-        for (var module : Kernel32Util.getModules(pid)) {
-            modules.add(module.szModule());
-        }
-
-        return Collections.unmodifiableList(modules);
     }
 
-    private static void checkRTSSModules(NativeWindowHandle window) {
+    private static void checkRTSSModules() {
         LOGGER.warn("RivaTuner Statistics Server (RTSS) has injected into the process! Attempting to apply workarounds for compatibility...");
 
         @Nullable WindowsFileVersion version = null;
@@ -104,6 +83,7 @@ public class ModuleScanner {
         }
 
         if (version == null || !isRTSSCompatible(version)) {
+            Window window = Minecraft.getInstance().getWindow();
             MessageBox.showMessageBox(window, MessageBox.IconType.ERROR, "Sodium Renderer",
                     """
                             You appear to be using an older version of RivaTuner Statistics Server (RTSS) which is not compatible with Sodium.
@@ -111,10 +91,10 @@ public class ModuleScanner {
                             You must either update to a newer version (7.3.4 and later) or close the RivaTuner Statistics Server application.
 
                             For more information on how to solve this problem, click the 'Help' button.""",
-                    "https://link.caffeinemc.net/help/sodium/incompatible-software/rivatuner-statistics-server/gh-2048");
+                    "https://github.com/CaffeineMC/sodium-fabric/wiki/Known-Issues#rtss-incompatible");
 
             throw new RuntimeException("The installed version of RivaTuner Statistics Server (RTSS) is not compatible with Sodium, " +
-                    "see here for more details: https://link.caffeinemc.net/help/sodium/incompatible-software/rivatuner-statistics-server/gh-2048");
+                    "see here for more details: https://github.com/CaffeineMC/sodium-fabric/wiki/Known-Issues#rtss-incompatible");
         }
     }
 
@@ -125,24 +105,6 @@ public class ModuleScanner {
 
         // >=7.3.4
         return x > 7 || (x == 7 && y > 3) || (x == 7 && y == 3 && z >= 4);
-    }
-
-    private static void checkASUSGpuTweakIII(NativeWindowHandle window) {
-        MessageBox.showMessageBox(window, MessageBox.IconType.ERROR, "Sodium Renderer",
-                """
-                        ASUS GPU Tweak III is not compatible with Minecraft, and causes extreme performance issues and severe graphical corruption when used with Minecraft.
-                        
-                        You *must* do one of the following things to continue:
-                        
-                        a) Open the settings of ASUS GPU Tweak III, enable the Blacklist option, click "Browse from file...", and select the Java runtime (javaw.exe) which is used by Minecraft.
-                        
-                        b) Completely uninstall the ASUS GPU Tweak III application.
-                        
-                        For more information on how to solve this problem, click the 'Help' button.""",
-                "https://link.caffeinemc.net/help/sodium/incompatible-software/asus-gtiii/gh-2637");
-
-        throw new RuntimeException("ASUS GPU Tweak III is not compatible with Minecraft, " +
-                "see here for more details: https://link.caffeinemc.net/help/sodium/incompatible-software/asus-gtiii/gh-2637");
     }
 
     private static @Nullable WindowsFileVersion findRTSSModuleVersion() {
